# EstoqueApp

./: .gitignore
api-gateway/: auth_pb2.py  main.py  pyproject.toml
api-gateway/protos/: auth.proto  auth_pb2.pyi  auth_pb2_grpc.py
client/web/: index.html  package-lock.json  package.json
client/web/src/: App.tsx  main.tsx
client/web/src/components/: AppLayout.tsx  Button.tsx  Card.tsx  Forms.tsx  Header.tsx  InputField.tsx  ProductTable.tsx  SearchInput.tsx  StatsCard.tsx
client/web/src/context/: AuthContext.tsx
client/web/src/layout/: AppLayout.tsx
client/web/src/pages/: Dashboard.tsx  Login.tsx  ProductRegistration.tsx  ProductUpdate.tsx  Register.tsx  Signup.tsx
client/web/src/routes/: ArtisanRoutes.tsx  Index.tsx
client/web/src/services/: api.ts
client/web/src/styles/: global.css  theme.css
client/web/src/types/: Product.ts
src/: db.sqlite3  pyproject.toml
src/auth/: main.py  pyproject.toml  server.py  test_client.py
src/auth/alembic/: env.py
src/auth/alembic/versions/: 0ee9312dc7cc_create_users_table.py  654678a1737c_add_table.py
src/auth/core/: config.py  database.py  hashing.py  schemas.py  security.py  services.py  validators.py
src/auth/models/: user.py
src/config/: settings.py
src/core/: controllers.py  models.py  schemas.py  services.py
src/core/migrations/: 0001_initial.py  0002_product_sku.py
src/product/: pyproject.toml
src/product/config/: urls.py
src/product/core/: auth.py  controllers.py  models.py  routes.py  schemas.py  services.py
src/product/core/migrations/: 0001_initial.py  (+1 more)
(+1 files in other folders)
